feat(v2): establish asset foundation
